// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders component correctly 1`] = `
[
  [
    {
      "west": {
        "execCommands": [
          {
            "command": "vscode.openFolder",
            "options": {
              "forceNewWindow": false,
            },
          },
        ],
      },
    },
  ],
]
`;

exports[`renders component correctly 2`] = `
[
  [
    {
      "west": {
        "execCommands": [
          {
            "command": "workbench.action.quickOpenRecent",
          },
        ],
      },
    },
  ],
]
`;
